src/test/ui/suggestions/attribute-typos.stderr
error[E0658]: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/attribute-typos.rs:7:3
   |
LL | #[rustc_err]
   |   ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: cannot find attribute macro `rustc_err` in this scope
  --> $DIR/attribute-typos.rs:7:3
   |
LL | #[rustc_err]
   |   ^^^^^^^^^ help: a built-in attribute with a similar name exists: `rustc_error`

error: cannot find attribute macro `tests` in this scope
  --> $DIR/attribute-typos.rs:4:3
   |
LL | #[tests]
   |   ^^^^^ help: an attribute macro with a similar name exists: `test`

error: cannot find attribute macro `deprcated` in this scope
  --> $DIR/attribute-typos.rs:1:3
   |
LL | #[deprcated]
   |   ^^^^^^^^^ help: a built-in attribute with a similar name exists: `deprecated`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
